--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -12,7 +12,7 @@ on:
 jobs:
   analyze:
     name: Analyze
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
     permissions:
       actions: read
       contents: read
@@ -27,29 +27,9 @@ jobs:
     - name: Checkout repository
       uses: actions/checkout@v2
 
-    # Initializes the CodeQL tools for scanning.
-    - name: Initialize CodeQL
-      uses: github/codeql-action/init@v1
-      with:
-        languages: ${{ matrix.language }}
-        debug: true
 
-    - name: Autobuild
-      uses: github/codeql-action/autobuild@v1
-
-    #- run: |
-    #   make bootstrap
-    #   make release
-
-    - name: Perform CodeQL Analysis
-      uses: github/codeql-action/analyze@v1
-      with:
-        output: sarif-results
-        wait-for-processing: true
-
-    - name: Upload loc as a Build Artifact
-      uses: actions/upload-artifact@v2.2.0
-      with:
-        name: sarif-results
-        path: sarif-results
+    - run: |
+       wget "https://github.com/github/codeql-action/releases/download/codeql-bundle-20211122/codeql-bundle-win64.tar.gz"
+       tar xf codeql-bundle-win64.tar.gz
+       ./codeql/codeql.exe version
 
