--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -29,7 +29,7 @@ jobs:
 
 
     - run: |
-       wget "https://github.com/github/codeql-action/releases/download/codeql-bundle-20211122/codeql-bundle-win64.tar.gz"
+       curl -L "https://github.com/github/codeql-action/releases/download/codeql-bundle-20211122/codeql-bundle-win64.tar.gz" > codeql-bundle-win64.tar.gz
        tar xf codeql-bundle-win64.tar.gz
        ./codeql/codeql.exe version
 
