--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -29,7 +29,10 @@ jobs:
 
 
     - run: |
+       file .
+       gunzip --version
        curl -L "https://github.com/github/codeql-action/releases/download/codeql-bundle-20211122/codeql-bundle-win64.tar.gz" > codeql-bundle-win64.tar.gz
+       file codeql-bundle-win64.tar.gz
        tar xf codeql-bundle-win64.tar.gz
        ./codeql/codeql.exe version
 
