--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -28,10 +28,11 @@ jobs:
       uses: actions/checkout@v2
 
 
-    - run: |
-       curl -o codeql.tar.gz -L "https://github.com/github/codeql-action/releases/download/codeql-bundle-20211122/codeql-bundle-win64.tar.gz"
-       file codeql.tar.gz
-       gunzip codeql.tar.gz
-       tar xf codeql.tar
-       ./codeql/codeql.exe version
+    - run: curl -o codeql.tar.gz -L "https://github.com/github/codeql-action/releases/download/codeql-bundle-20211122/codeql-bundle-win64.tar.gz"
+    - run: file codeql.tar.gz
+    - run: gunzip codeql.tar.gz
+    - run: ls
+    - run: file codeql.tar
+    - run: tar xf codeql.tar
+    - run: ./codeql/codeql.exe version
 
